subprojects/ere/ere/tests/ui/unbound_named_field.stderr
error: No capture group named `foo` found in the regular expression.
  --> tests/ui/unbound_named_field.rs:10:9
   |
10 |         foo: &'a str,
   |         ^^^

error[E0433]: failed to resolve: use of undeclared type `HomerSimpson`
  --> tests/ui/unbound_named_field.rs:13:13
   |
13 |     let _ = HomerSimpson::exec("J. Simpson");
   |             ^^^^^^^^^^^^ use of undeclared type `HomerSimpson`
